[gd_scene load_steps=3 format=2]

[ext_resource path="res://Folders/UI/UserInterface.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/SpriteUI/Asset_hearth_Full.png" type="Texture" id=2]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TimerLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.063
anchor_right = 0.5
anchor_bottom = 0.063
margin_left = -132.0
margin_top = -34.8
margin_right = -2.0
margin_bottom = 1.2
text = "00:00"
align = 1
valign = 1

[node name="LifeContainer" type="HBoxContainer" parent="."]
anchor_left = 0.189
anchor_top = 0.073
anchor_right = 0.189
anchor_bottom = 0.073
margin_left = -153.536
margin_top = -41.8
margin_right = 154.464
margin_bottom = 58.2

[node name="Heart_1" type="TextureRect" parent="LifeContainer"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 2 )

[node name="Heart_2" type="TextureRect" parent="LifeContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture = ExtResource( 2 )

[node name="Heart_3" type="TextureRect" parent="LifeContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
texture = ExtResource( 2 )

[node name="KillCountLabel" type="Label" parent="."]
anchor_left = 0.95
anchor_top = 0.062
anchor_right = 0.95
anchor_bottom = 0.062
margin_left = -53.8
margin_top = -7.2
margin_right = 23.2
margin_bottom = 6.8
text = "KILL: 0"
align = 1
valign = 1

[node name="GameTimer" type="Timer" parent="."]
autostart = true
